# grafika

./: CMakeLists.txt  egyudv-c11m1l-grafika-beadando.docx  logs.h  main.cpp
